--- a/GoogleAnalytics/app/src/main/res/layout/activity_main.xml
+++ b/GoogleAnalytics/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,14 @@
     android:orientation="vertical"
     tools:context="pethersilva.com.googleanalytics.MainActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:minHeight="?attr/actionBarSize"
+        android:background="#2196F3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.Toolbar>
+
     <Button
         android:id="@+id/details_activity"
         android:layout_width="wrap_content"
